Only correct div's collapse now; not ALL pane-content divs

--- a/Phoenix/css/site-layout.css
+++ b/Phoenix/css/site-layout.css
@@ -126,8 +126,10 @@
             text-align: center;
         }
         .pane-content {
-            display: none;
             padding: 7px;
+        }
+        .input.pane-content, .checkout.pane-content {
+            display: none;
         }
 
 /***************************/
